--- a/style/content.css
+++ b/style/content.css
@@ -1,6 +1,8 @@
 .content {
+    display: block;
     position: absolute;
     width: 1160px;
+    min-height: 100vh;
     left: 280px;
     top: 64px;
     bottom: 0px;
