--- a/style/main.css
+++ b/style/main.css
@@ -6,22 +6,23 @@
 }
 
 body {
+    
     position: relative;
     width: 1440px;
+    width: 100%;
     min-height: 100vh;
     background: #2D2D2D;
-    overflow: hidden;
-    
+    overflow:hidden;
 }
 
-/* @media screen and (max-width: 1300px) {
-    .container {
+@media screen and (max-width: 1440px) {
+    .root {
         width: 900px;
     }
-} */
-.bx{
-    background-color: antiquewhite;
 }
+/* .bx{
+    background-color: antiquewhite;
+} */
 
 
 
