--- a/style/header.css
+++ b/style/header.css
@@ -6,13 +6,13 @@
     padding: 0px;
     /* width: 100%; */
     width: 1160px;
-   
+
 }
 
 .header_wrap {
     display: flex;
     flex-direction: row;
-    justify-content:flex-end;
+    justify-content: flex-end;
     align-items: center;
     height: 64px;
     top: 0px;
@@ -29,31 +29,38 @@
     color: #F9F9FB;
     padding: 14px 9px;
     font-size: 22px;
-    
-    
+
+
 }
 
 .header_wrap i:hover {
-    
+
     color: #9E26FF;
 }
-.header_wrap img{
+
+.header_wrap img {
     width: 40px;
     height: 40px;
     border-radius: 100px;
     background: url(../img/user_one.png);
-    
-
 }
+
 .header_wrap img:hover {
     color: #9E26FF;
 }
-.user_name{
+
+.user_name {
     color: #F9F9FB;
     font-weight: 400;
     font-size: 18px;
     line-height: 24px;
     align-items: center;
     text-align: center;
+    padding-right: 20px;
     position: relative;
+
+}
+
+.user_name:hover {
+    color: #9E26FF;
 }
