--- a/style/contentUsers.css
+++ b/style/contentUsers.css
@@ -2,7 +2,7 @@
     display: block;
     position: absolute;
     width: 1160px;
-    height: 100vh;
+    height: 836px;
     border: 1px solid #3A3C51;
     /* min-height: calc(100vh- 64px); not work????*/
     left: 280px;
