--- a/style/contentUsers.css
+++ b/style/contentUsers.css
@@ -155,7 +155,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    color: #7B7C8A;
+    color: #F9F9FB;
     background-color: #262836;
     border-radius: 8px;
 }
