--- a/style/main.css
+++ b/style/main.css
@@ -8,14 +8,17 @@
 body {
     display: block;
     position: relative;
-    width: 1440px;
+    /* min-width: 1440px; */
     margin-left: auto;
     margin-left: auto;
     min-height: 100vh;
     background: #2D2D2D;
     overflow: hidden;
 }
-
+.root{
+    width: 1440px; ;
+    height: calc(100vh-64px);
+}
 @media screen and (max-width: 1500px) {
     .root {
         width: 900px;
