--- a/style/contentCourses_video.css
+++ b/style/contentCourses_video.css
@@ -37,6 +37,7 @@
     background: #262836;
     border: 1px solid #3A3C51;
     border-radius: 8px;
+    /* width: 174px; */
 }
 
 .courses_video:hover {
