--- a/style/header.css
+++ b/style/header.css
@@ -19,9 +19,9 @@
     gap: 12px;
 }
 
-.header_wrap:hover {
+/* .header_wrap:hover {
     border-color: #9E26FF;
-}
+} */
 
 .header_wrap i {
     background-color: #0D0D14;
