--- a/style/login.css
+++ b/style/login.css
@@ -8,7 +8,7 @@ body {
 .box {
     width: 400px;
     padding: 40px;
-    position:fixed;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -16,7 +16,8 @@ body {
     transition: all 0.5s ease;
     text-align: center;
 }
-.box:hover{
+
+.box:hover {
     border-color: #9E26FF
 }
 
@@ -49,7 +50,27 @@ body {
     transition: 0.25s;
 }
 
-.box input[type="submit"] {
+ .box input[type="submit"] {
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid #9E26FF;
+    padding: 14px 10px;
+    width: 200px;
+    outline: none;
+    color: white;
+    border-radius: 24px;
+    transition: 0.25s;
+    cursor: pointer;
+} 
+ .box input[ type="submit"]:hover {
+    background: #9E26FF;
+    cursor: pointer;
+} 
+
+.box button {
     border: 0;
     background: none;
     display: block;
@@ -65,6 +86,13 @@ body {
     cursor: pointer;
 }
 
-.box input[ type="submit"]:hover {
+.box button:hover {
     background: #9E26FF;
+    cursor: pointer;
+}
+
+.root svg {
+    position: sticky;
+    left: 44.42%;
+    margin-top: 70px;
 }
