--- a/style/navigation.css
+++ b/style/navigation.css
@@ -61,13 +61,14 @@
 
 }
 
-.naw_dashboard li a {
+.naw_dashboard ul li a {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     gap: 18px;
     text-decoration: none;
     font-size: 22px;
+    list-style:none;
 }
 
 .naw_list li a i {
